# ultrasonic-ndt-lab

./: .gitignore  README.md  pyproject.toml
algorithms/01_ascan/: README.md  example.py
algorithms/02_bscan/: README.md  example.py  figure_formation.py  figure_principle.py
docs/: 00-preface.md  01-ascan.md  02-bscan.md
src/ultrasonic_ndt/: __init__.py  visualization.py  widgets.py
src/ultrasonic_ndt/data/: __init__.py  ascan.py  bscan.py
src/ultrasonic_ndt/processing/: __init__.py  bscan.py  gate.py  pipeline.py  tgc.py
src/ultrasonic_ndt/signal/: __init__.py  processing.py
src/ultrasonic_ndt/simulation/: __init__.py  ascan.py  bscan.py
